--- a/magazzino.html
+++ b/magazzino.html
@@ -60,9 +60,12 @@
                 </div>
 
                 <div class="flex flex-col gap-4">
-                    <div id="nav-public-links">
+                    <div id="nav-public-links" class="hidden">
                         <button onclick="app.nav('inventory'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3 w-full mb-3">
                             <span>🔦</span> Inventario
+                        </button>
+                        <button onclick="app.nav('cassoni'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3 w-full mb-3">
+                            <span>📦</span> Cassoni Materiale
                         </button>
                         
                         <button onclick="window.location.href='index.html'" class="text-left w-full text-blue-100 font-bold text-sm hover:text-white transition flex items-center justify-between gap-3 border border-blue-500 bg-blue-900/50 p-3 rounded-lg shadow-inner mt-4">
