--- a/magazzino.html
+++ b/magazzino.html
@@ -232,7 +232,9 @@
             <select id="prod-cat" class="w-full p-2 border rounded mb-3 bg-white text-sm">
                 <option value="tende">Tende</option>
                 <option value="cucina">Cucina</option>
+                <option value="pioneristica">Pioneristica</option>
                 <option value="attrezzi">Attrezzi</option>
+                <option value="extra">Extra</option>
                 <option value="altro">Altro</option>
             </select>
 
