--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-green-900 h-screen flex flex-col items-center justify-center text-white p-6 relative overflow-hidden">
 
     <script>
-        const GLOBAL_MAINTENANCE = false; // <--- METTI TRUE PER BLOCCARE IL SITO
+        const GLOBAL_MAINTENANCE = true; // <--- METTI TRUE PER BLOCCARE IL SITO
     </script>
 
     <div id="main-portal" class="z-10 text-center w-full max-w-md transition-opacity duration-300">
