--- a/magazzino.html
+++ b/magazzino.html
@@ -134,11 +134,11 @@
 
                 <div class="flex gap-2 overflow-x-auto pb-2 scrollbar-hide">
                     <button onclick="app.setCategory('all')" class="filter-btn active whitespace-nowrap px-4 py-1.5 rounded-full border border-gray-300 text-xs font-bold text-gray-600 bg-white transition" id="btn-cat-all">Tutto</button>
-                    <button onclick="app.setCategory('tende')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-blue-300 text-xs font-bold text-blue-700 bg-blue-50 transition" id="btn-cat-tende">⛺ Tende</button>
+                    <button onclick="app.setCategory('campismo')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-green-300 text-xs font-bold text-green-700 bg-green-50 transition" id="btn-cat-campismo">⛺ Campismo</button>
                     <button onclick="app.setCategory('cucina')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-orange-300 text-xs font-bold text-orange-700 bg-orange-50 transition" id="btn-cat-cucina">🍳 Cucina</button>
-                    <button onclick="app.setCategory('pioneristica')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-green-300 text-xs font-bold text-green-700 bg-green-50 transition" id="btn-cat-pioneristica">🌲 Pioneristica</button>
-                    <button onclick="app.setCategory('attrezzi')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-gray-400 text-xs font-bold text-gray-700 bg-gray-50 transition" id="btn-cat-attrezzi">🔨 Attrezzi</button>
-                    <button onclick="app.setCategory('extra')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-purple-300 text-xs font-bold text-purple-700 bg-purple-50 transition" id="btn-cat-extra">✨ Extra</button>
+                    <button onclick="app.setCategory('attivita')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-blue-300 text-xs font-bold text-blue-700 bg-blue-50 transition" id="btn-cat-attivita">🎨 Attività</button>
+                    <button onclick="app.setCategory('cancelleria')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-pink-300 text-xs font-bold text-pink-700 bg-pink-50 transition" id="btn-cat-cancelleria">✏️ Cancelleria</button>
+                    <button onclick="app.setCategory('extra')" class="filter-btn whitespace-nowrap px-4 py-1.5 rounded-full border border-gray-400 text-xs font-bold text-gray-700 bg-gray-50 transition" id="btn-cat-extra">✨ Extra</button>
                 </div>
             </div>
             
@@ -214,8 +214,15 @@
         <div id="cart-items" class="flex-1 overflow-y-auto p-4 space-y-3 bg-gray-50 pb-20"></div>
         <div class="p-4 border-t bg-white absolute bottom-0 w-full">
             <button onclick="cart.empty()" class="w-full text-red-400 text-xs font-bold mb-2 text-center">SVUOTA</button>
-            <input type="text" id="checkout-name" placeholder="Chi preleva? (es. Pattuglia Aquile)" class="w-full p-3 border-2 border-gray-200 rounded-lg mb-2 text-sm font-bold">
-            <button onclick="app.checkout()" class="w-full bg-blue-700 text-white font-bold py-3 rounded-lg shadow-lg">REGISTRA USCITA</button>
+            <div class="mb-2">
+                <label class="text-[10px] uppercase font-bold text-gray-400 ml-1">Chi preleva?</label>
+                <input type="text" id="checkout-name" placeholder="Es. Pattuglia Aquile" class="w-full p-3 border-2 border-gray-200 rounded-lg text-sm font-bold">
+            </div>
+            <div class="mb-3">
+                <label class="text-[10px] uppercase font-bold text-gray-400 ml-1">Data prevista restituzione</label>
+                <input type="date" id="checkout-date" class="w-full p-3 border-2 border-gray-200 rounded-lg text-sm font-bold text-gray-600">
+            </div>
+            <button onclick="app.checkout()" class="w-full bg-blue-700 text-white font-bold py-3 rounded-lg shadow-lg">REGISTRA PRESTITO</button>
         </div>
     </div>
 
@@ -230,12 +237,11 @@
             
             <label class="text-xs font-bold text-gray-500 uppercase">Categoria</label>
             <select id="prod-cat" class="w-full p-2 border rounded mb-3 bg-white text-sm">
-                <option value="tende">Tende</option>
+                <option value="campismo">Campismo (Tende/Pioneristica)</option>
                 <option value="cucina">Cucina</option>
-                <option value="pioneristica">Pioneristica</option>
-                <option value="attrezzi">Attrezzi</option>
+                <option value="attivita">Attività</option>
+                <option value="cancelleria">Cancelleria</option>
                 <option value="extra">Extra</option>
-                <option value="altro">Altro</option>
             </select>
 
             <div class="flex gap-2 mb-3">
